2001-08-11  Andrew Cagney  <ac131313@redhat.com>

	* config/mn10300/mn10300.mt (TM_FILE): Delete.
	* configure.tgt: Add mn10300 to list of mulit-arch targets.
	* config/mn10300/tm-mn10300.h: Delete file. Move contents ...
	* mn10300-tdep.c: To here.

2001-08-11  Andrew Cagney  <ac131313@redhat.com>

	* config/i386/tm-symmetry.h (REGISTER_CONVERT_TO_VIRTUAL): Make
	val a DOUBLEST.  Use floatformat_to_doublest.
	(REGISTER_CONVERT_TO_RAW): Ditto.  Use foatformat_from_doublest.
	* config/m88k/tm-m88k.h (REGISTER_CONVERT_TO_VIRTUAL): Ditto.
	(REGISTER_CONVERT_TO_RAW): Ditto.

2001-08-11  Andrew Cagney  <ac131313@redhat.com>

	* config/mn10300/tm-mn10300.h (PC_REGNUM, SP_REGNUM): Delete.
	* mn10300-tdep.c (mn10300_gdbarch_init): Initialize pc_regnum and
	sp_regnum.

2001-08-11  Andrew Cagney  <ac131313@redhat.com>

	* doublest.c (convert_doublest_to_floatformat): Rename
	floatformat_from_doublest.  Make static.
	(convert_floatformat_to_doublest): Rename floatformat_to_doublest.
	Make static.
	(floatformat_to_doublest): New function.
	(floatformat_from_doublest): New function.
	(host_float_format, host_double_format, host_long_double_format):
	New static variables.
	(store_floating, extract_floating): Always use
	floatformat_to_doublest and floatformat_from_doublest.
	* doublest.h (HOST_LONG_DOUBLE_FORMAT): Delete macro.

2001-08-11  Andrew Cagney  <ac131313@redhat.com>

	* config/mn10300/tm-mn10300.h (INIT_FRAME_PC): Delete.
	* mn10300-tdep.c (mn10300_gdbarch_init): Initialize init_frame_pc.

2001-08-07  Andrew Cagney  <ac131313@redhat.com>

	* target.h (TARGET_VIRTUAL_FRAME_POINTER): Delete, multi-arched.
	* gdbarch.sh (TARGET_VIRTUAL_FRAME_POINTER): Add.
	* gdbarch.h, gdbarch.c: Regenerate.

	* arch-utils.h (legacy_virtual_frame_pointer): Declare.
	* arch-utils.c: Include "gdb_assert.h".
	(legacy_virtual_frame_pointer): Define.
	* Makefile.in (arch-utils.o): Depends on gdb_assert.h.

	* tracepoint.c (encode_actions): Make frame_reg an int.  Make